manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo
  name: echo
  namespace: test
spec:
  selector:
    app: echo
  ports:
  - port: 8080
    targetPort: 8080
